[gd_scene load_steps=15 format=2]

[ext_resource path="res://Themes/Fonts/source/BasicallyASansSerif-Black.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Textures/Right Arrow.png" type="Image" id=2]
[ext_resource path="res://Assets/Textures/Left Arrow.png" type="Image" id=3]
[ext_resource path="res://Scripts/ProfSectionController.gd" type="Script" id=4]
[ext_resource path="res://Scenes/ProfileSections/PersonalDataContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/ProfileSections/PhysCharContainer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/ButtonTexture.gd" type="Script" id=7]
[ext_resource path="res://Themes/main_theme.tres" type="Theme" id=8]
[ext_resource path="res://Scenes/ProfileSections/SocPerContainer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/ProfileSections/RPSystemsContainer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/ProfileSections/MissionContainer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/ProfileSections/InventoryContainer.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/ProfileSections/FinalizationContainer.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="Profile_Core" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="MainProfileContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 4
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavigationContainer" type="HBoxContainer" parent="MainProfileContainer"]
margin_right = 984.0
margin_bottom = 48.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 40 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="MainProfileContainer/NavigationContainer"]
margin_left = 306.0
margin_top = 4.0
margin_right = 346.0
margin_bottom = 44.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
source_image = ExtResource( 3 )

[node name="SectionLabel" type="Label" parent="MainProfileContainer/NavigationContainer"]
margin_left = 350.0
margin_right = 633.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 1 )
text = "Test Label "
align = 1
valign = 1
uppercase = true

[node name="RightButton" type="TextureButton" parent="MainProfileContainer/NavigationContainer"]
margin_left = 637.0
margin_top = 4.0
margin_right = 677.0
margin_bottom = 44.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
source_image = ExtResource( 2 )

[node name="PersonalDataContainer" parent="MainProfileContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 984.0
margin_bottom = 85.0
theme = ExtResource( 8 )

[node name="PhysCharContainer" parent="MainProfileContainer" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 81.0
margin_right = 984.0
margin_bottom = 106.0

[node name="SocPerContainer" parent="MainProfileContainer" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 984.0
margin_bottom = 85.0
theme = ExtResource( 8 )

[node name="RPSystemsContainer" parent="MainProfileContainer" instance=ExtResource( 10 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 984.0
margin_bottom = 116.0

[node name="MissionContainer" parent="MainProfileContainer" instance=ExtResource( 11 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 984.0
margin_bottom = 85.0

[node name="InventoryContainer" parent="MainProfileContainer" instance=ExtResource( 12 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 984.0
margin_bottom = 85.0

[node name="FinalizationContainer" parent="MainProfileContainer" instance=ExtResource( 13 )]
margin_top = 52.0
margin_right = 984.0
margin_bottom = 52.0
[connection signal="pressed" from="MainProfileContainer/NavigationContainer/LeftButton" to="MainProfileContainer" method="_on_LeftButton_pressed"]
[connection signal="pressed" from="MainProfileContainer/NavigationContainer/RightButton" to="MainProfileContainer" method="_on_RightButton_pressed"]
